# OpenHRI_Audio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  env.bat  install.bat  package.xml
YAML/: AudioPlayerRTC.yaml  AutoGainControl.yaml  BeamForming.yaml  ChannelSelector.yaml  CombFilter.yaml  DSArray.yaml  EchoCanceler.yaml  EchoSuppressor.yaml  Gate.yaml  KinectAudioImageInput.yaml  KinectAudioInput.yaml  KinectRTC.yaml  Mixer.yaml  NoiseReduction.yaml  PortAudioInput.yaml  PortAudioOutput.yaml  PulseAudioInput.yaml  PulseAudioOutput.yaml  SamplingRateConverter.yaml  SignalGeneration.yaml  SimpleGestureRTC.yaml  Skeleton2JointAngleRTC.yaml  WavPlayer.yaml  WavRecord.yaml  WebRTCVAD.yaml
cmake/: FindPortAudio.cmake  FindResample.cmake  FindSndFile.cmake  FindSpeex.cmake  Findgtkmm-2.4.cmake  RTC.cmake  RTCD.cmake
cmake/tra/: FindPortAudio - 繧ｳ繝斐・.cmake  FindPortAudio - 繧ｳ繝斐・.cmake~  FindResample.cmake  FindSndFile - 繧ｳ繝斐・.cmake  FindSndfile.cmake.old  FindSndfile.cmake__  FindSpeex - 繧ｳ繝斐・.cmake  Findksguid - 繧ｳ繝斐・.cmake
doc/: combfilter-ja.rst  dsarray.rst  echosuppressor-ja.rst  pulseaudioinput.rst
include/: MENUDLG.rc  MenuDialog.h  OPTDLG.rc  OpenHRI.h
src/: CMakeLists.txt  setup.bat
src/AutoGainControl/: AutoGainControl.cpp  AutoGainControl.h  CMakeLists.txt
src/AutoGainControl/include/: AutoGainControl.h
src/AutoGainControl/src/: AutoGainControl.cpp  AutoGainControlComp.cpp
src/BeamForming/: BeamForming.cpp  BeamForming.h  CMakeLists.txt
src/BeamForming/include/: BeamForming.h
src/BeamForming/src/: BeamForming.cpp  BeamFormingComp.cpp
src/ChannelSelector/: CMakeLists.txt  ChannelSelector.cpp  ChannelSelector.h
src/ChannelSelector/include/: ChannelSelector.h
src/ChannelSelector/src/: ChannelSelector.cpp  ChannelSelectorComp.cpp
src/CombFilter/: CMakeLists.txt  CombFilter.cpp  CombFilter.h
src/CombFilter/include/: CombFilter.h
src/CombFilter/src/: CombFilter.cpp  CombFilterComp.cpp
src/DSArray/: CMakeLists.txt  DSArray.cpp  DSArray.h
src/DSArray/include/: DSArray.h  windowing.h
src/DSArray/src/: DSArray.cpp  DSArrayComp.cpp
src/EchoCanceler/: CMakeLists.txt  EchoCanceler.cpp  EchoCanceler.h
src/EchoCanceler/include/: EchoCanceler.h
src/EchoCanceler/src/: EchoCanceler.cpp  EchoCancelerComp.cpp
src/EchoSuppressor/: CMakeLists.txt  EchoSuppressor.cpp  EchoSuppressor.h
src/EchoSuppressor/include/: EchoSuppressor.h
src/EchoSuppressor/src/: EchoSuppressor.cpp  EchoSuppressorComp.cpp
src/Gate/: CMakeLists.txt
src/Gate/include/: Gate.h
src/Gate/src/: Gate.cpp  GateComp.cpp
src/Mixer/: CMakeLists.txt  Mixer.cpp  Mixer.h
src/Mixer/include/: Mixer.h
src/Mixer/src/: Mixer.cpp  MixerComp.cpp  utils.cpp
src/NoiseReduction/: CMakeLists.txt  NoiseReduction.cpp  NoiseReduction.h
src/NoiseReduction/include/: NoiseReduction.h
src/NoiseReduction/src/: NoiseReduction.cpp  NoiseReductionComp.cpp
src/OpenHRIAudioManager/: CMakeLists.txt
src/PortAudioInput/: CMakeLists.txt  PortAudioInput.cpp  PortAudioInput.h
src/PortAudioInput/idl/: CMakeLists.txt
src/PortAudioInput/include/: CMakeLists.txt  PortAudioInput.h
src/PortAudioInput/src/: CMakeLists.txt  PortAudioInput.cpp  PortAudioInputComp.cpp  utils.cpp
src/PortAudioOutput/: CMakeLists.txt  PortAudioOutput.cpp  PortAudioOutput.h
src/PortAudioOutput/include/: CMakeLists.txt
src/PortAudioOutput/include/PortAudioOutput/: PortAudioOutput.h
src/PortAudioOutput/src/: CMakeLists.txt  PortAudioOutput.cpp  PortAudioOutputComp.cpp
src/PulseAudioInput/: CMakeLists.txt  PulseAudioInput.cpp  PulseAudioInput.h  PulseAudioInputComp.cpp
src/PulseAudioInput/include/: PulseAudioInput.h
src/PulseAudioInput/src/: PulseAudioInput.cpp  PulseAudioInputComp.cpp
src/PulseAudioOutput/: CMakeLists.txt  PulseAudioOutput.cpp  PulseAudioOutput.h  PulseAudioOutputComp.cpp  RTC.xml
src/PulseAudioOutput/include/: PulseAudioOutput.h
src/PulseAudioOutput/src/: PulseAudioOutput.cpp  PulseAudioOutputComp.cpp
src/SamplingRateConverter/: CMakeLists.txt  SamplingRateConverter.cpp  SamplingRateConverter.h
src/SamplingRateConverter/include/: SamplingRateConverter.h
src/SamplingRateConverter/src/: SamplingRateConverter.cpp  SamplingRateConverterComp.cpp
src/SignalGeneration/: CMakeLists.txt  SignalGeneration.cpp  SignalGeneration.h
src/SignalGeneration/include/: SignalGeneration.h
src/SignalGeneration/src/: SignalGeneration.cpp  SignalGenerationComp.cpp
src/WavPlayer/: CMakeLists.txt  WavPlayer.cpp  WavPlayer.h  WavPlayerComp.cpp
src/WavPlayer/include/: WavPlayer.h
src/WavPlayer/src/: WavPlayer.cpp  WavPlayerComp.cpp
src/WavRecord/: CMakeLists.txt  WavRecord.cpp  WavRecord.h  WavRecordComp.cpp
src/WavRecord/cpack_resources/: wix.xsl.in
src/WavRecord/include/: WavRecord.h
src/WavRecord/src/: WavRecord.cpp  WavRecordComp.cpp
src/WebRTCVAD/: CMakeLists.txt  WebRTCVAD.cpp  WebRTCVAD.h
src/WebRTCVAD/include/: WebRTCVAD.h
src/WebRTCVAD/src/: WebRTCVAD.cpp  WebRTCVADComp.cpp
src/YAML/: AudioPlayerRTC.yaml  AutoGainControl.yaml  ChannelSelector.yaml  CombFilter.yaml  DSArray.yaml  EchoSuppressor.yaml  Gate.yaml  KinectAudioImageInput.yaml  KinectRTC.yaml  PortAudioOutput.yaml  SamplingRateConverter.yaml  SimpleGestureRTC.yaml  Skeleton2JointAngleRTC.yaml  WavRecord.yaml
src/fftwrap/: CMakeLists.txt
